cbits/Bullet.h

void* btDiscreteCollisionDetectorInterface_ClosestPointInput_new(); //constructor: ClosestPointInput  ( ::btDiscreteCollisionDetectorInterface::ClosestPointInput::* )(  ) 
void btDiscreteCollisionDetectorInterface_ClosestPointInput_free(void *c);
 
void btDiscreteCollisionDetectorInterface_ClosestPointInput_m_transformA_set(void *c,float* a); //attribute: ::btTransform btDiscreteCollisionDetectorInterface_ClosestPointInput->m_transformA
void btDiscreteCollisionDetectorInterface_ClosestPointInput_m_transformA_get(void *c,float* a);
void btDiscreteCollisionDetectorInterface_ClosestPointInput_m_transformB_set(void *c,float* a); //attribute: ::btTransform btDiscreteCollisionDetectorInterface_ClosestPointInput->m_transformB
void btDiscreteCollisionDetectorInterface_ClosestPointInput_m_transformB_get(void *c,float* a);
void btDiscreteCollisionDetectorInterface_ClosestPointInput_m_maximumDistanceSquared_set(void *c,float a); //attribute: ::btScalar btDiscreteCollisionDetectorInterface_ClosestPointInput->m_maximumDistanceSquared
float btDiscreteCollisionDetectorInterface_ClosestPointInput_m_maximumDistanceSquared_get(void *c); //attribute: ::btScalar btDiscreteCollisionDetectorInterface_ClosestPointInput->m_maximumDistanceSquared
void btDiscreteCollisionDetectorInterface_ClosestPointInput_m_stackAlloc_set(void *c,void* a); //attribute: ::btStackAlloc * btDiscreteCollisionDetectorInterface_ClosestPointInput->m_stackAlloc
void* btDiscreteCollisionDetectorInterface_ClosestPointInput_m_stackAlloc_get(void *c); //attribute: ::btStackAlloc * btDiscreteCollisionDetectorInterface_ClosestPointInput->m_stackAlloc
void btDiscreteCollisionDetectorInterface_Result_setShapeIdentifiersB(void *c,int p0,int p1); //method: setShapeIdentifiersB void ( ::btDiscreteCollisionDetectorInterface::Result::* )( int,int ) 
void btDiscreteCollisionDetectorInterface_Result_setShapeIdentifiersA(void *c,int p0,int p1); //method: setShapeIdentifiersA void ( ::btDiscreteCollisionDetectorInterface::Result::* )( int,int ) 
void btDiscreteCollisionDetectorInterface_Result_addContactPoint(void *c,float* p0,float* p1,float p2); //method: addContactPoint void ( ::btDiscreteCollisionDetectorInterface::Result::* )( ::btVector3 const &,::btVector3 const &,::btScalar ) 
void* btConstraintRow_new(); //constructor: btConstraintRow  ( ::btConstraintRow::* )(  ) 
void btConstraintRow_free(void *c);
 
// attribute not supported: //attribute: ::btScalar[3] btConstraintRow->m_normal
void btConstraintRow_m_rhs_set(void *c,float a); //attribute: ::btScalar btConstraintRow->m_rhs
float btConstraintRow_m_rhs_get(void *c); //attribute: ::btScalar btConstraintRow->m_rhs
void btConstraintRow_m_jacDiagInv_set(void *c,float a); //attribute: ::btScalar btConstraintRow->m_jacDiagInv
float btConstraintRow_m_jacDiagInv_get(void *c); //attribute: ::btScalar btConstraintRow->m_jacDiagInv
void btConstraintRow_m_lowerLimit_set(void *c,float a); //attribute: ::btScalar btConstraintRow->m_lowerLimit
float btConstraintRow_m_lowerLimit_get(void *c); //attribute: ::btScalar btConstraintRow->m_lowerLimit
void btConstraintRow_m_upperLimit_set(void *c,float a); //attribute: ::btScalar btConstraintRow->m_upperLimit
float btConstraintRow_m_upperLimit_get(void *c); //attribute: ::btScalar btConstraintRow->m_upperLimit
void btConstraintRow_m_accumImpulse_set(void *c,float a); //attribute: ::btScalar btConstraintRow->m_accumImpulse