Physics/Bullet/Raw/BulletCollision/NarrowPhaseCollision.chs

{-#LANGUAGE ForeignFunctionInterface#-}
#include "Bullet.h"
module Physics.Bullet.Raw.BulletCollision.NarrowPhaseCollision (
module Physics.Bullet.Raw.BulletCollision.NarrowPhaseCollision
) where
import Control.Monad
import Foreign.Marshal.Alloc
import Foreign.ForeignPtr.Unsafe
import Foreign.Ptr
import Physics.Bullet.Raw.C2HS
import Physics.Bullet.Raw.Types
import Physics.Bullet.Raw.Class
-- * ClosestPointInput
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#45>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_new as btDiscreteCollisionDetectorInterface_ClosestPointInput    {  } -> `BtDiscreteCollisionDetectorInterface_ClosestPointInput' mkBtDiscreteCollisionDetectorInterface_ClosestPointInput* #}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_free    `( BtDiscreteCollisionDetectorInterface_ClosestPointInputClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#51>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_m_transformA_set    `( BtDiscreteCollisionDetectorInterface_ClosestPointInputClass bc )' =>     { withBt* `bc' , withTransform* `Transform'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#51>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_m_transformA_get    `( BtDiscreteCollisionDetectorInterface_ClosestPointInputClass bc )' =>     { withBt* `bc' , allocaTransform-  `Transform'  peekTransform* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#52>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_m_transformB_set    `( BtDiscreteCollisionDetectorInterface_ClosestPointInputClass bc )' =>     { withBt* `bc' , withTransform* `Transform'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#52>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_m_transformB_get    `( BtDiscreteCollisionDetectorInterface_ClosestPointInputClass bc )' =>     { withBt* `bc' , allocaTransform-  `Transform'  peekTransform* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#53>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_m_maximumDistanceSquared_set    `( BtDiscreteCollisionDetectorInterface_ClosestPointInputClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#53>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_m_maximumDistanceSquared_get    `( BtDiscreteCollisionDetectorInterface_ClosestPointInputClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#54>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_m_stackAlloc_set    `( BtDiscreteCollisionDetectorInterface_ClosestPointInputClass bc , BtStackAllocClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#54>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_ClosestPointInput_m_stackAlloc_get    `( BtDiscreteCollisionDetectorInterface_ClosestPointInputClass bc )' =>     { withBt* `bc'  } ->  `BtStackAlloc'  mkBtStackAlloc* #}
-- * Result
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#39>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_Result_setShapeIdentifiersB as btDiscreteCollisionDetectorInterface_Result_setShapeIdentifiersB    `( BtDiscreteCollisionDetectorInterface_ResultClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ partId1
,  `Int'  -- ^ index1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#38>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_Result_setShapeIdentifiersA as btDiscreteCollisionDetectorInterface_Result_setShapeIdentifiersA    `( BtDiscreteCollisionDetectorInterface_ResultClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ partId0
,  `Int'  -- ^ index0
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#40>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_Result_addContactPoint as btDiscreteCollisionDetectorInterface_Result_addContactPoint    `( BtDiscreteCollisionDetectorInterface_ResultClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ normalOnBInWorld
, withVec3* `Vec3'  peekVec3* -- ^ pointInWorld
,  `Float'  -- ^ depth
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#40>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btDiscreteCollisionDetectorInterface_Result_addContactPoint as btDiscreteCollisionDetectorInterface_Result_addContactPoint'    `( BtDiscreteCollisionDetectorInterface_ResultClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ normalOnBInWorld
, allocaVec3-  `Vec3'  peekVec3* -- ^ pointInWorld
,  `Float'  -- ^ depth
 } ->  `()'   #}
-- * btConstraintRow
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#27>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_new as btConstraintRow    {  } -> `BtConstraintRow' mkBtConstraintRow* #}
{#fun btConstraintRow_free    `( BtConstraintRowClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#29>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_m_rhs_set    `( BtConstraintRowClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#29>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_m_rhs_get    `( BtConstraintRowClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#30>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_m_jacDiagInv_set    `( BtConstraintRowClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#30>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_m_jacDiagInv_get    `( BtConstraintRowClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#31>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_m_lowerLimit_set    `( BtConstraintRowClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#31>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_m_lowerLimit_get    `( BtConstraintRowClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#32>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_m_upperLimit_set    `( BtConstraintRowClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#32>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_m_upperLimit_get    `( BtConstraintRowClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#33>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btConstraintRow_m_accumImpulse_set    `( BtConstraintRowClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#33>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
